fixed spacing between icons

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -53,34 +53,26 @@
 .tweet .tweet-body p {
   font-size: 1.3em;
   margin-left: 15px;
-  margin-top: 35px;
+  margin-top: 15px;
 }
 
 .tweet footer {
   border-top: solid 1px rgba(128, 128, 128, 0.32);
-  display: flex;
   height: 5px;
-  justify-content: space-between;
-}
-
-.tweet footer span {
-  margin-top: 15px;
-  margin-right: 10px;
-  color: white;
-}
-
-.tweet footer span i {
-  position: static;
-  padding-left: 10px;
-  padding-right: 10px;
-  float: right;
-  text-align: center;
-  vertical-align: bottom;
 }
 
 .tweet footer p {
+  float: left;
   font-size: 0.9em;
-  margin-left: 15px;
+  margin-left: 10px;
+}
+
+.tweet footer span {
+  float: right;
+  margin-top: 15px;
+  margin-right: 10px;
+  padding-left: 5px;
+  color: white;
 }
 
 .tweet:hover {
